wip: add additional upgrade guide notes

--- a/src/docs/shared/release-notes/5.35.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.35.0/upgrade-guide.mdx
@@ -113,7 +113,7 @@ Across multiple `package.json` files, the [upgrade command](#2-run-the-upgrade-c
 
 #### Custom Babel Plugins For Emotion
 
-Note that if you've been using custom Babel plugins for Emotion, you will need to update them to the latest version as well. 
+Note that if you've been using custom Babel plugins for Emotion, you will need to manually update them to the latest version. 
 
 These are usually introduced via `webiny.config.ts` files. For example, if you had something like the following in either your `apps/admin/webiny.config.ts` or `apps/website/webiny.config.ts` files:
 
@@ -240,9 +240,15 @@ For example:
 }
 ```
 
+The upgrade command will automatically update the `styles.typography` object in your `theme/theme.ts` file. Note that if you've added custom typography variants, the upgrade might not be able to update the `styles.typography` object correctly. In that case, you will need to manually update the `styles.typography` object in your `theme/theme.ts` file.
+
 ##### **2. Accessing Typography Styles**
 
-The second change is the way typography is accessed. Previously, you could access typography styles via the `styles.typography` object, and then by using the typography variant as a key, for example `theme.styles.typography.heading1`.
+The second change is the way typography is accessed. Previously, you could access typography styles via the `styles.typography` object, and then by using the typography variant as a key, for example:
+
+```ts
+theme.styles.typography.heading1
+```
 
 Since the structure of the `styles.typography` object has changed, you will need to access typography styles via the `styles.typography` object, and then by using the typography type as a key, and finally by using the typography variant as a key, for example 
 
