wip: add additional upgrade guide notes

--- a/src/docs/shared/release-notes/5.35.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.35.0/upgrade-guide.mdx
@@ -155,9 +155,9 @@ In case of the above, note that the options for the [`@emotion/babel-plugin`](ht
 
 </Alert>
 
-### Theming-related Updates
+### Website Theme Object
 
-The upgrade command will perform a couple of code level updates related to theming. The following sections will explain what changes are made, and how you can manually apply them if the upgrade command fails to do so.
+The upgrade command will perform a couple of code level updates related to the central website theme object. The following sections will explain what changes are made, and how you can manually apply them if the upgrade command fails to do so.
 
 #### Updated Theme Object Structure
 
