wip: add additional upgrade guide notes

--- a/src/docs/shared/release-notes/5.35.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.35.0/upgrade-guide.mdx
@@ -292,3 +292,19 @@ In case of the above, note that the options for the [`@emotion/babel-plugin`](ht
   The [upgrade command](#2-run-the-upgrade-command) will try to detect usage of custom Babel plugins for Emotion. If detected, it will print the following message in terminal: **Warning: Found custom Emotion plugins in your project. Please make sure to update them to the latest version.**
 
 </Alert>
+
+## Upgrade Command - Troubleshooting
+
+The following are some of the most common issues that you might encounter when upgrading to version 5.35.0.
+
+### Custom key webiny-pb-typography-body could not be migrated
+
+TODO
+
+### Could not migrate all typography-related code
+
+TODO
+
+### Found custom Emotion plugins in your project. Please make sure to update them to the latest version
+
+TODO
