--- a/src/docs/shared/release-notes/5.35.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.35.0/upgrade-guide.mdx
@@ -105,17 +105,19 @@ Environments](../../core-development-concepts/ci-cd/environments) key topic.
 
 </Alert>
 
-## Upgrade Command - Additional Notes
+## Upgrade Command
+
+### Additional Notes
 
 The following sections explains some of the steps that the upgrade command performs. We recommend that you read through them to get familiar with the changes introduced in this release.
 
 Note that there might be cases where the upgrade command will not be able to automatically apply the changes. In such cases, you will be prompted to manually apply the changes.
 
-### Theme Object
+#### Theme Object
 
 The upgrade command will perform a couple of code level changes related to your website's theme object structure.
 
-#### `styles.typography`
+##### `styles.typography`
 
 Prior to this release, within the theme object, the `styles.typography` property referenced an object where keys represented the typography variant (heading1, heading2, etc.), and values were objects representing the actual typography styles. For example:
 
@@ -189,9 +191,7 @@ From now on, the `styles.typography` property references an object where keys re
 
 The upgrade command will automatically update the `styles.typography` object in your `theme/theme.ts` file. But do note that if you've added custom typography variants, the upgrade might not be able to update the `styles.typography` object correctly. In that case, manual intervention will be required.
 
-The following warning message will be displayed if the upgrade command fails to update the `styles.typography` object: **Custom key {KEY_NAME} could not be migrated.**
-
-#### Accessing Typography Styles
+##### Accessing Typography Styles
 
 The second change is related to the way typography styles are accessed. Previously, you could access typography styles via the `styles.typography` object, and then by using the typography variant as a key, for example:
 
@@ -214,7 +214,7 @@ theme.styles.typography["headings"].stylesById["heading1"]
 The upgrade command will automatically update the `styles.typography` object in your `theme/theme.ts` file. But 
 if for some reason it fails to do so, you can manually update usage of the `styles.typography` object in your project.
 
-#### Theme Object Accessed Via Context Object
+##### Theme Object Accessed Via Context Object
 
 Prior to version 5.35.0, upon creating styled React components, if required, the [`theme`](https://github.com/webiny/webiny-js/blob/next/apps/theme/theme.ts#L145-L218) object would be accessed by directly importing the `theme/theme.ts` file. This is no longer the case as, from now on, the object should be [accessed via React context](https://emotion.sh/docs/theming). 
 
@@ -239,17 +239,114 @@ With the new version, the following changes should be made:
 
 Note that the upgrade command will try to detect legacy usages of the `theme` object and will try to adjust them automatically. However, if you have custom code that uses the `theme` object, you might need to make the necessary adjustments manually. You will notice this as, upon running the [`webiny watch`](/docs/{version}/core-development-concepts/basics/watch-command)  command against the Admin or the Website application, errors will be reported.
 
-### Default Form Layout Replaced
+#### Default Form Layout Replaced
 
 Because of all of the theme object-related changes, and also [new improvements](/docs/release-notes/5.35.0/changelog#form-builder) that have been introduced to the Form Builder application, note that your default form layout will be backed up and completely replaced with the latest version of the layout. This means that if you have made any customizations to the default form layout, you will need to manually re-apply them to the new layout.
 
-### Emotion 11
+#### Emotion 11
 
 With this release, we are [upgrading Emotion library](/docs/release-notes/5.35.0/changelog#emotion-11-3138) to version 11.
 
 Across multiple `package.json` files, the [upgrade command](#2-run-the-upgrade-command) will upgrade versions of all [`@emotion`](https://emotion.sh/docs/emotion-11) packages to version 11. It will also replace all usages of the [`@emotion/core`](https://www.npmjs.com/package/@emotion/core) package with the new [`@emotion/react`](https://www.npmjs.com/package/@emotion/react) ([`@emotion/core`](https://www.npmjs.com/package/@emotion/core) package is now deprecated).
 
-#### Custom Babel Plugins
+### Troubleshooting
+
+The following are some of the most common issues that you might encounter when upgrading to version 5.35.0.
+
+#### Typography variant was categorized as a paragraph, double check if a different category is more appropriate.
+
+This warning is printed when the upgrade command is unable to categorize a custom typography variant that you might have added to the `theme/theme.ts` file, within the `styles.typography` object. For example, this will happen if you have something like the following:
+
+```ts apps/theme/theme.ts
+{
+  // ...
+  styles: {
+    typography: {
+      // Custom typography key.
+      myCustomTypography: {
+        // ...
+      },
+    }
+  }
+}
+```
+
+Since it's impossible to detect the correct category, the upgrade command will categorize the `myCustomTypography` variant as a paragraph:
+
+```diff-ts apps/theme/theme.ts
+{
+  // ...
+  styles: {
+    typography: {
+      paragraphs: {
+        // Custom typography key.
+        myCustomTypography: {
+          // ...
+        },
+      },
+    }
+  }
+}
+```
+
+
+
+If you believe that this is not the correct category, you can manually update the `styles.typography` object in your `theme/theme.ts` file. For example, you might want to move the `myCustomTypography` variant into the `headings` category:
+
+```diff-ts apps/theme/theme.ts
+{
+  // ...
+  styles: {
+    typography: {
+-     paragraphs: {
+-       // Remove the custom typography variant here.
+-       myCustomTypography: {
+-         // ...
+-       }
+-     },
++     headings: {
++       // Move the custom typography variant here.
++       myCustomTypography: {
++         // ...
++       }
++     }
+    }
+  }
+}
+```
+
+
+#### Could not migrate all typography-related code
+
+This error is printed when the upgrade command is unable to migrate all of the typography-related code in your project. This usually happens when you have custom code that uses the `theme` object or sometimes in case typography variants are being accessed. For example, if you had the following Emotion styled component:
+
+```tsx
+const CustomStyledComponent = styled('div')({
+    h1: {
+        ...typography.heading1,
+        marginBottom: 20,
+        marginTop: 50
+    }
+});
+
+```
+
+The `heading1` object is now accessed via the `theme` context object, so the above code will need to be adjusted to the following:
+
+```diff-tsx
+- const CustomStyledComponent = styled('div')({
++ const CustomStyledComponent = styled('div')(({ theme }) => ({ // The theme object is now accessed via the context object. 
+    h1: {
+-       ...typography.heading1,
++       ...theme.styles.typography["headings"].stylesById("heading1"),
+        marginBottom: 20,
+        marginTop: 50
+    }
+}));
+```
+
+
+#### Found custom Emotion plugins in your project. Please make sure to update them to the latest version
 
 Note that if you've been using custom Babel plugins for Emotion, you will need to manually update them to the latest version.
 
@@ -286,25 +383,3 @@ export default createWebsiteAppConfig(({ config }) => {
 ```
 
 In case of the above, note that the options for the [`@emotion/babel-plugin`](https://www.npmjs.com/package/@emotion/babel-plugin) are different from the ones for the [`babel-plugin-emotion`](https://www.npmjs.com/package/babel-plugin-emotion) plugin. You can find more information about the new plugin [here](https://emotion.sh/docs/emotion-11#babel-preset-and-babel-plugin).
-
-<Alert type={"info"}>
-
-  The [upgrade command](#2-run-the-upgrade-command) will try to detect usage of custom Babel plugins for Emotion. If detected, it will print the following message in terminal: **Warning: Found custom Emotion plugins in your project. Please make sure to update them to the latest version.**
-
-</Alert>
-
-## Upgrade Command - Troubleshooting
-
-The following are some of the most common issues that you might encounter when upgrading to version 5.35.0.
-
-### Custom key webiny-pb-typography-body could not be migrated
-
-TODO
-
-### Could not migrate all typography-related code
-
-TODO
-
-### Found custom Emotion plugins in your project. Please make sure to update them to the latest version
-
-TODO
