fix: add troubleshooting

--- a/src/docs/shared/release-notes/5.35.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.35.0/upgrade-guide.mdx
@@ -316,7 +316,7 @@ If you believe that this is not the correct category, you can manually update th
 ```
 
 
-#### Could not migrate all typography-related code
+#### Could not migrate some of the theme object's typography-related code.
 
 This error is printed when the upgrade command is unable to migrate all of the typography-related code in your project. This usually happens when you have custom code that uses the `theme` object or sometimes in case typography variants are being accessed. For example, if you had the following Emotion styled component:
 
@@ -346,7 +346,7 @@ The `heading1` object is now accessed via the `theme` context object, so the abo
 ```
 
 
-#### Found custom Emotion plugins in your project. Please make sure to update them to the latest version
+#### Found custom Emotion plugins in your project. Please make sure to update them to the latest version.
 
 Note that if you've been using custom Babel plugins for Emotion, you will need to manually update them to the latest version.
 
