fix: add troubleshooting

--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -198,6 +198,8 @@ The measurements cover all our CMS GraphQL Queries and Mutations, as well as the
 
 ### ✍️ Introducing Page Templates ([#2963](https://github.com/webiny/webiny-js/pull/2963) [#3086](https://github.com/webiny/webiny-js/pull/3086))
 
+### ✍️ Introducing A Brand New Text Editor ([#3147](https://github.com/webiny/webiny-js/pull/2963))
+
 ### Introducing Advanced Content Organization for Page Builder
 
 The Advanced Content Organization (ACO) for Page Builder is a new feature that provides users with the ability to organize content in an effective, easy-to-manage way. The ACO allows users to add pages in separate folders and rearrange content as needed, making it easier to find what they are looking for.
@@ -324,6 +326,8 @@ Furthermore, grid cells can now be vertically expanded and take the full height 
 Finally, users can now apply vertical centering of content placed in grid cells.
 
 <Image src={gridVerticalCentering} title={"Vertical Centering Grid Cells Vertically Expanded"} />
+
+### ✍️ Improved Theme Object's `styled.typography` Object ([#3147](https://github.com/webiny/webiny-js/pull/2963))
 
 ### Theme Object Now Available In Emotion Styled Components ([#3141](https://github.com/webiny/webiny-js/pull/3141))
 
