--- a/src/docs/shared/release-notes/5.35.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.35.0/upgrade-guide.mdx
@@ -315,6 +315,11 @@ If you believe that this is not the correct category, you can manually update th
 }
 ```
 
+<Alert type={"info"}>
+
+  To learn more about the new theme object and typography-related changes, check out the above [Theme Object](#theme-object) section.
+
+</Alert>
 
 #### Could not migrate some of the theme object's typography-related code.
 
@@ -345,6 +350,11 @@ The `heading1` object is now accessed via the `theme` context object, so the abo
 }));
 ```
 
+<Alert type={"info"}>
+
+  To learn more about the new theme object and typography-related changes, check out the above [Theme Object](#theme-object) section.
+
+</Alert>
 
 #### Found custom Emotion plugins in your project. Please make sure to update them to the latest version.
 
@@ -383,3 +393,9 @@ export default createWebsiteAppConfig(({ config }) => {
 ```
 
 In case of the above, note that the options for the [`@emotion/babel-plugin`](https://www.npmjs.com/package/@emotion/babel-plugin) are different from the ones for the [`babel-plugin-emotion`](https://www.npmjs.com/package/babel-plugin-emotion) plugin. You can find more information about the new plugin [here](https://emotion.sh/docs/emotion-11#babel-preset-and-babel-plugin).
+
+<Alert type={"info"}>
+
+  To learn more about the Emotion 11 upgrade, check out the above [Emotion 11](#emotion-11) section.
+
+</Alert>
