fix: add warnings about legacy rendering engine

--- a/src/docs/shared/release-notes/5.35.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.35.0/upgrade-guide.mdx
@@ -117,6 +117,14 @@ Note that there might be cases where the upgrade command will not be able to aut
 
 The upgrade command will perform a couple of code level changes related to your website's theme object structure.
 
+<Alert type={"warning"}>
+
+  Note that in order to receive these changes, your project must be using the latest Page Builder page rendering engine, introduced with [Webiny 5.34.0](/docs/release-notes/5.34.0/changelog#page-elements-a-brand-new-page-rendering-engine-2898).
+
+</Alert>
+
+<br/><br/>
+
 ##### `styles.typography`
 
 Prior to this release, within the theme object, the `styles.typography` property referenced an object where keys represented the typography variant (heading1, heading2, etc.), and values were objects representing the actual typography styles. For example:
@@ -243,11 +251,24 @@ Note that the upgrade command will try to detect legacy usages of the `theme` ob
 
 Because of all of the theme object-related changes, and also [new improvements](/docs/release-notes/5.35.0/changelog#form-builder) that have been introduced to the Form Builder application, note that your default form layout will be backed up and completely replaced with the latest version of the layout. This means that if you have made any customizations to the default form layout, you will need to manually re-apply them to the new layout.
 
+<br/> <br/>
+<Alert type={"warning"}>
+
+  Note that in order to receive these changes, your project must be using the latest Page Builder page rendering engine, introduced with [Webiny 5.34.0](/docs/release-notes/5.34.0/changelog#page-elements-a-brand-new-page-rendering-engine-2898).
+
+</Alert>
+
 #### Emotion 11
 
 With this release, we are [upgrading Emotion library](/docs/release-notes/5.35.0/changelog#emotion-11-3138) to version 11.
 
 Across multiple `package.json` files, the [upgrade command](#2-run-the-upgrade-command) will upgrade versions of all [`@emotion`](https://emotion.sh/docs/emotion-11) packages to version 11. It will also replace all usages of the [`@emotion/core`](https://www.npmjs.com/package/@emotion/core) package with the new [`@emotion/react`](https://www.npmjs.com/package/@emotion/react) ([`@emotion/core`](https://www.npmjs.com/package/@emotion/core) package is now deprecated).
+
+<Alert type={"warning"}>
+
+  Note that in order to receive these changes, your project must be using the latest Page Builder page rendering engine, introduced with [Webiny 5.34.0](/docs/release-notes/5.34.0/changelog#page-elements-a-brand-new-page-rendering-engine-2898).
+
+</Alert>
 
 ### Troubleshooting
 
@@ -399,3 +420,7 @@ In case of the above, note that the options for the [`@emotion/babel-plugin`](ht
   To learn more about the Emotion 11 upgrade, check out the above [Emotion 11](#emotion-11) section.
 
 </Alert>
+
+#### Some of the theme-related upgrades were not applied because you are using an older version of the Page Builder rendering engine.
+
+If you received this warning while upgrading, it means that your project is not using the latest Page Builder rendering engine, introduced with [Webiny 5.34.0](/docs/release-notes/5.34.0/changelog#page-elements-a-brand-new-page-rendering-engine-2898). To learn more about the new rendering engine and how to upgrade, check out the [Page Builder - Page Rendering Engine Migration](/docs/release-notes/5.34.0/page-builder-pe-rendering-engine-migration) tutorial.
