fix: add warnings about legacy rendering engine

--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -329,6 +329,12 @@ Finally, users can now apply vertical centering of content placed in grid cells.
 
 ### ✍️ Improved Theme Object's `styled.typography` Object ([#3147](https://github.com/webiny/webiny-js/pull/2963))
 
+<Alert type={"warning"}>
+
+  Note that in order to receive these changes, your project must be using the latest Page Builder page rendering engine, introduced with [Webiny 5.34.0](/docs/release-notes/5.34.0/changelog#page-elements-a-brand-new-page-rendering-engine-2898).
+
+</Alert>
+
 ### Theme Object Now Available In Emotion Styled Components ([#3141](https://github.com/webiny/webiny-js/pull/3141))
 
 Prior to this release, if users wanted to use [Emotion styled components](https://emotion.sh/docs/styled) with their [custom page elements](https://www.webiny.com/docs/page-builder/extending/create-a-page-element) and needed to access the [theme](https://github.com/webiny/webiny-js/blob/dev/packages/cwp-template-aws/template/common/apps/theme/theme.ts), they were unable to do it as documented in Emotion's [Theming](https://emotion.sh/docs/theming) documentation article, which is via the [React context](https://react.dev/learn/passing-data-deeply-with-context).
@@ -345,6 +351,12 @@ export const HeroSectionWithTheme = styled.div(({ theme }) => ({
 }));
 ```
 
+<Alert type={"warning"}>
+
+  Note that in order to receive these changes, your project must be using the latest Page Builder page rendering engine, introduced with [Webiny 5.34.0](/docs/release-notes/5.34.0/changelog#page-elements-a-brand-new-page-rendering-engine-2898).
+
+</Alert>
+
 ### Custom Responsive Emotion Styled Components Are Now Rendered Correctly In the Page Editor ([#3141](https://github.com/webiny/webiny-js/pull/3141))
 
 Prior to this release, if users wanted to use [Emotion styled components](https://emotion.sh/docs/styled) with their [custom page elements](https://www.webiny.com/docs/page-builder/extending/create-a-page-element), they would be unable to see them adapt to different screen sizes in the page editor, while building their pages. Essentially, different CSS rules defined via [media queries](https://developer.mozilla.org/en-US/docs/Web/CSS/Media_Queries/Using_media_queries) would work on the public website, but not in the page editor.
@@ -356,6 +368,12 @@ With this release, your custom responsive Emotion styled components should be re
 Ensuring responsive design works on both public website and in the page editor was achieved via the [`@container` CSS at-rule](https://developer.mozilla.org/en-US/docs/Web/CSS/@container). Essentially, the page canvas in the page editor is now a container, and, while in the page editor, breakpoints and their `@media` queries defined in the [theme](https://github.com/webiny/webiny-js/blob/dev/packages/cwp-template-aws/template/common/apps/theme/theme.ts) get transformed into `@container pb-page-canvas` rules.
 
 More information on this can be found in the new [Theming](/docs/{exact:5.35.x}/page-builder/theming/introduction) article.
+
+</Alert>
+
+<Alert type={"warning"}>
+
+  Note that in order to receive these changes, your project must be using the latest Page Builder page rendering engine, introduced with [Webiny 5.34.0](/docs/release-notes/5.34.0/changelog#page-elements-a-brand-new-page-rendering-engine-2898).
 
 </Alert>
 
@@ -415,6 +433,12 @@ export const HeroSectionWithTheme = styled("div")(
 <Alert type="info">
 
 More information on this can be found in the new [Theming](/docs/{exact:5.35.x}/page-builder/theming/introduction) article.
+
+</Alert>
+
+<Alert type={"warning"}>
+
+  Note that in order to receive these changes, your project must be using the latest Page Builder page rendering engine, introduced with [Webiny 5.34.0](/docs/release-notes/5.34.0/changelog#page-elements-a-brand-new-page-rendering-engine-2898).
 
 </Alert>
 
@@ -485,6 +509,12 @@ When you preview the submission details in the modal dialog you'll notice two ne
 
 We've added the ability to have an "Other" option in the radio button and checkbox fields. This way, you can easily allow users to add a custom value to the field.
 
+<Alert type={"warning"}>
+
+  Note that in order to receive these changes, your project must be using the latest Page Builder page rendering engine, introduced with [Webiny 5.34.0](/docs/release-notes/5.34.0/changelog#page-elements-a-brand-new-page-rendering-engine-2898).
+
+</Alert>
+
 ### Multiple Improvements on the Default Form Layout ([#3009](https://github.com/webiny/webiny-js/pull/3009) [#2950](https://github.com/webiny/webiny-js/pull/2950) [#2964](https://github.com/webiny/webiny-js/pull/2964))
 
 We've made several improvements to the default form layout. The most notable ones are:
@@ -500,6 +530,12 @@ Previously the required fields didn't have any indicator on them to show that th
 <Image src={fbHelpText} title={"Form Builder - Help text"} />
 
 The position of the field help text has now been moved under the title to make it easier to read.
+
+<Alert type={"warning"}>
+
+  Note that in order to receive these changes, your project must be using the latest Page Builder page rendering engine, introduced with [Webiny 5.34.0](/docs/release-notes/5.34.0/changelog#page-elements-a-brand-new-page-rendering-engine-2898).
+
+</Alert>
 
 ### Added Basic Form Field ID Validation ([#3017](https://github.com/webiny/webiny-js/pull/3017))
 
@@ -644,6 +680,12 @@ This upgrade enables Webiny users to use all of the latest and greatest features
 For Webiny itself, the new version enabled us to [provide the theme object](#theme-object-now-available-in-emotion-styled-components-3141) upon creating custom Emotion styled components.
 
 Note that the migration script included with this release will ensure the library is upgraded to the new version. Users do not need to upgrade the library manually.
+
+<Alert type={"warning"}>
+
+  Note that in order to receive these changes, your project must be using the latest Page Builder page rendering engine, introduced with [Webiny 5.34.0](/docs/release-notes/5.34.0/changelog#page-elements-a-brand-new-page-rendering-engine-2898).
+
+</Alert>
 
 ### New Frontend Utility Functions ([#3126](https://github.com/webiny/webiny-js/pull/3126))
 
