fix: reword the removal of HCMS Lambda function item

--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -49,18 +49,15 @@ import fmFileAliases from "./assets/fm-file-aliases.png";
 
 ## Breaking Changes
 
-### Removing the Headless CMS AWS Lambda Function ([#2945](https://github.com/webiny/webiny-js/pull/2945))
+### Removed the Headless CMS AWS Lambda Function ([#2945](https://github.com/webiny/webiny-js/pull/2945))
 
-<Alert type="warning">
+Prior to 5.35.0 version of Webiny, all remote GraphQL API HTTP requests were handled by two separate AWS Lambda functions. One function was responsible for serving the Default GraphQL API (accessible via the `/graphql` endpoint), while the other was responsible for serving the [Headless CMS GraphQL API](/docs/headless-cms/basics/graphql-api) (accessible via the `/cms/{type}/{locale}` endpoint).
 
-In 5.35.0, we're removing the Headless CMS Lambda function from user's projects. This is a breaking change, but it is quite an easy one to migrate.
+Starting with 5.35.0, all remote GraphQL API HTTP requests are handled by a single AWS Lambda function. In other words, the function is responsible for serving both the Default and Headless CMS GraphQL APIs. Note that the mentioned `/graphql` and `/cms/{type}/{locale}` endpoints remain unchanged.
 
-</Alert>
+This change will simplify the development and deployment process for the users, and make it much easier to add plugins which interact with the entire system, for example hooking into all the lifecycle hooks Webiny has to offer.
 
-Starting with the `5.35.0` release, there is only one Lambda Function which handles the requests, the one called GraphQL (`apps/api/graphql`).
-We removed the Headless CMS Lambda Function to simplify the development and deployment process for the users, and make it much easier to add plugins which interact with the entire system, and hook into all the lifecycle hooks Webiny has to offer.
-
-To learn how to migrate your project, please follow the [Upgrade Guide](/docs/release-notes/5.35.0/upgrade-guide).
+Apart from the usual upgrade guide that's included with each Webiny release, we've also created a [separate guide](/docs/release-notes/5.35.0/removing-the-headless-cms-lambda-function) that deals with change in more detail. 
 
 ### Singular And Plural Model API Name ([#3111](https://github.com/webiny/webiny-js/pull/3111))
 
