fix: add GraphQL word

--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -107,7 +107,7 @@ query ListTags {
 
 <Alert type="warning" title="Programmatic usage">
 
-If you are using the `listTags` query directly, you will need to update your code to use the new `data, error` envelope, as well as the `tag` and `count` fields.
+If you are using the `listTags` GraphQL query directly, you will need to update your code to use the new `data, error` envelope, as well as the `tag` and `count` fields.
 
 </Alert>
 
