fix: update defining content models via code alert

--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -57,7 +57,7 @@ Starting with 5.35.0, all remote GraphQL API HTTP requests are handled by a sing
 
 This change will simplify the development and deployment process for the users, and make it much easier to add plugins which interact with the entire system, for example hooking into all the lifecycle hooks Webiny has to offer.
 
-Apart from the usual upgrade guide that's included with each Webiny release, we've also created a [separate guide](/docs/release-notes/5.35.0/removing-the-headless-cms-lambda-function) that deals with change in more detail. 
+Apart from the usual upgrade guide that's included with each Webiny release, we've also created a [separate guide](/docs/release-notes/5.35.0/removing-the-headless-cms-lambda-function) that deals with change in more detail.
 
 ### Singular And Plural Model API Name ([#3111](https://github.com/webiny/webiny-js/pull/3111))
 
@@ -74,9 +74,13 @@ From now on, models created via the Admin UI will always need to have singular a
   tenants and locales.
 </Alert>
 
-<Alert type="warning" title={"Code Models"}>
-  If you're creating content models via code, you should update those code models before the
-  deployment!
+<Alert type="warning">
+
+If you're [defining content models via code](/docs/{exact:5.35.x}/headless-cms/extending/content-models-via-code), you
+can now define the singular and plural API name for the model. If you don't define the singular and plural API name,
+the API name will be created from the `modelId` property and for the plural, we'll use
+[pluralize](https://www.npmjs.com/package/pluralize) library.
+
 </Alert>
 
 ### List File Tags ([#3227](https://github.com/webiny/webiny-js/pull/3227))
