fix: use feature title instead of 'this feature'

--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -117,7 +117,7 @@ If you are using the `listTags` GraphQL query directly, you will need to update 
 
 ### `createFile` Mutation Requires a File Id
 
-With [this feature](#support-file-aliases-3096), file ID is now mandatory when calling `createFile` GraphQL mutation. If you've never used this mutation programmatically, you can ignore this change. But if you have custom scripts interacting with the File Manager, make sure you update them to include all the data returned from `getPresignedPostPayload` query.
+With the [Support File Aliases](#support-file-aliases-3096) feature, file ID is now mandatory when calling `createFile` GraphQL mutation. If you've never used this mutation programmatically, you can ignore this change. But if you have custom scripts interacting with the File Manager, make sure you update them to include all the data returned from `getPresignedPostPayload` query, if that's not already the case.
 
 ### Changed The Location of `FileManagerFileTypePlugin` Plugin
 
